--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     --color_yellow:#e6f202;
     --bg_color: #000;
     --white: #fff;
-    --text-color: #ddddddb4;
+    --text-color: #dddddd80;
 }
 
 *{
@@ -443,10 +443,10 @@ ul.list{
 .hero__content p{
     line-height: 40px;
     word-spacing: 5px;
-    width: 80%;
+    width: 100%;
     font-size: 1.5rem;
     font-weight: 500;
-    padding: 1rem;
+    /* padding: 1rem; */
 }
 
 .orangeCol{
@@ -523,16 +523,16 @@ ul.list{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    /* border: 1px solid green; */
+    /* border: 1px solid red; */
     /* background: url(/img/burger-arrange-removebg-preview.png) no-repeat center center/ cover; */
 }
 
 
 .hero__img img{
     /* width: 100%; */
-    width: 43.75rem;/* 700px*/
-    object-fit: cover;
-    margin-right: 5rem;
+    width: 85%;/* 700px*/
+    object-fit: contain;
+    /* margin-right: 5rem; */
     transform: rotate(15deg);
     /* border: 1px solid green; */
 }
@@ -743,7 +743,8 @@ marquee p{
 
 /* sections h2's */
 .sect_2__wrap h2,
-.sect__3__wrap h2{
+.sect__3__wrap h2,
+#sect__4__wrap h2{
     font-family: var(--headers);
     letter-spacing: 3px;
     font-size: 2.5rem;
@@ -929,7 +930,8 @@ marquee p{
 
     /* sections h2 */
     .sect_2__wrap h2,
-    .sect__3__wrap h2{
+    .sect__3__wrap h2,
+    #sect__4__wrap h2{
         font-size: 2rem;
     }
 
@@ -959,7 +961,8 @@ marquee p{
 
     /* section h2s */
     .sect_2__wrap h2,
-    .sect__3__wrap h2{
+    .sect__3__wrap h2,
+    #sect__4__wrap h2{
         font-size: 1.8rem;
         text-align: center;
     }
@@ -997,13 +1000,15 @@ marquee p{
 
 
 /* #### section 3 ##### */
-#section_3{
+#section_3,
+#section_4{
     width: 100%;
     height: auto;
     padding:6.25rem; /*98px and 150px*/
 }
 
-.sect__3__wrap{
+.sect__3__wrap,
+#sect__4__wrap{
     /* this wrap everything inside of sec 3 */
     width: 100%;
     height: 100%;
@@ -1175,9 +1180,19 @@ marquee p{
 .burger__menu__img_wrap img{
     width: 95%;
     height: 95%;
-    /* animation: imgFadeIn 1s .6s ease-in-out both; */
+    animation: imgFadeIn 1s .6s ease-in-out both;
 }
 
+
+@keyframes imgFadeIn {
+    from{
+        opacity: 0;
+        transform: translateY(-30px);
+    }to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
 
 /* @media 992px */
 @media (max-width: 992px) {
@@ -1216,5 +1231,245 @@ marquee p{
         padding: 0.7rem;
     }
 }
+
+
+
+/* ############################################### */
+/* ########## section 4 ################### */
+
+#section_4{
+    height: auto;
+    /* padding: 0px; */
+}
+
+#sect__4__wrap{
+    height: auto;
+    row-gap: 5rem;
+}
+
+.about__BurgerBite{
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.about__img,
+.about__content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about__img{
+    align-items: flex-start;
+}
+.about__img img{
+    width: 66%;
+    /* height: 80%; */
+    object-fit: cover;
+}
+
+/* about content styling */
+.about__content{
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
+    align-items: center;
+}
+.about__content p{
+    width: 90%;
+    line-height: 35px;
+    font-size: 1.2rem;
+    word-spacing: 3px;
+    text-align: left;
+}
+.about__content .boldText{
+    font-family: var(--headers);
+    text-transform: uppercase;
+}
+
+.about__link__wrap{
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+    padding: 1.3rem;
+    /* perspective: 800px; */
+}
+
+.about__link__wrap a{
+    text-decoration: none;
+    width:  11.25rem;/*180px*/
+    padding: 0.5625rem ;
+    color: var(--text-color);
+    border: 2px solid var(--color_orange_dk);
+    border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.6;
+    transition: background-color 380ms ease-in-out,
+    border 380ms ease, transform 390ms ease-in-out
+    ;
+}
+.about__link__wrap a:hover{
+    transform: scale(1.078);
+    background-color: var(--color_orange_dk);
+    color: var(--white); 
+    border: none;
+    opacity: 1;
+}
+.about__link__wrap a:active{
+    transform: translateY(4px);
+}
+
+
+/* @media quiery  */
+@media (max-width: 992px) {
+    #section_4{
+        padding: 50px;
+    }
+    #sect__4__wrap h2{
+        text-align: center;
+    }
+    /* #sect__4__wrap{
+        border: 1px solid green;
+    } */
+    .about__BurgerBite{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 25px;
+    }
+    .about__content{
+        width: 100%;
+    }
+    .about__content p{
+        width: 100%;
+        text-align: justify;
+    }
+    .about__img {
+        width: 100%;
+        grid-column: 1/3;
+    }
+    .about__img img{
+        width: 100%;
+    }
+
+    .about__link__wrap a{
+        font-size: 1rem;
+        width: 8rem;
+        text-align: center;
+    }
+    .about__link__wrap a:nth-child(4),
+    .about__link__wrap a:nth-child(5),
+    .about__link__wrap a:nth-child(6)
+    {
+        margin-left: -9.375rem; /*-150px*/
+    }
+}
+@media (max-width: 767px) {
+    #section_4{
+        padding: 50px;
+    }
+    #sect__4__wrap h2{
+        text-align: center;
+    }
+    /* #sect__4__wrap{
+        border: 1px solid green;
+    } */
+    .about__BurgerBite{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 25px;
+    }
+    .about__content{
+        width: 100%;
+    }
+    .about__content p{
+        width: 100%;
+        text-align: justify;
+    }
+    .about__img {
+        width: 100%;
+        grid-column: 1/3;
+    }
+    .about__img img{
+        width: 100%;
+    }
+
+    .about__link__wrap a{
+        font-size: 0.95rem;
+        width: 8rem;
+        text-align: center;
+    }
+    .about__content .boldText{
+        font-size: 1.1rem;
+    }
+}
+@media (max-width: 480px) {
+    #section_4{
+        padding: 50px;
+    }
+    /* #sect__4__wrap{
+        border: 1px solid green;
+    } */
+    .about__BurgerBite{
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+    }
+    .about__content{
+        width: 100%;
+    }
+    #sect__4__wrap h2{
+        width: 100%;
+    }
+
+    .about__content p{
+        width: 100%;
+        font-size: 0.955rem;
+        text-align: justify;
+    }
+    .about__img {
+        width: 100%;
+        grid-column: 1/3;
+    }
+    .about__img img{
+        width: 100%;
+    }
+
+    .about__link__wrap{
+        grid-template-columns: repeat(2, 1fr);
+        z-index: 3;
+        justify-content: center;
+        gap: 10px;
+    }
+    .about__link__wrap a{
+        font-size: 0.95rem;
+        width: 9rem;
+        padding: 0.4rem;
+        text-align: center;
+    }
+    .about__content .boldText{
+        font-size: 1.1rem;
+    }
+    .about__link__wrap a:nth-child(4),
+    .about__link__wrap a:nth-child(5),
+    .about__link__wrap a:nth-child(6)
+    {
+        margin-left: 0px;
+    }
+}
+
+
+/* ################################ */
+
+
+
+
 
 
