forth commit: created a testimonial section that scroll on it own

--- a/style.css
+++ b/style.css
@@ -1001,14 +1001,15 @@ marquee p{
 
 /* #### section 3 ##### */
 #section_3,
-#section_4{
+#section_4,#section_5{
     width: 100%;
     height: auto;
     padding:6.25rem; /*98px and 150px*/
 }
 
 .sect__3__wrap,
-#sect__4__wrap{
+#sect__4__wrap,
+#sect__5__wrap{
     /* this wrap everything inside of sec 3 */
     width: 100%;
     height: 100%;
@@ -1466,10 +1467,219 @@ marquee p{
 }
 
 
+
+
 /* ################################ */
+/* ### section 5 */
+
+#sect__5__wrap{
+    row-gap: 40px;
+}
+
+.testimonial{
+    width: 700px;
+    /* height: 350px; */
+
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    /* padding: 25px 1.1rem; */
+    /* border: 3px solid yellow; */
+
+    aspect-ratio: 16/9;
+    overflow: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+}
+
+.testimonial::-webkit-scrollbar{
+    display: none;
+}
+
+.testimonies{
+    width: 100%;
+    height: auto;
+    background-color: #111;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    padding: 25px 1.1rem;
+
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+
+    animation: slide 16s infinite;
+}
+
+
+@keyframes slide {
+    0%{
+        transform: translateX(0);
+    }
+    25%{
+        transform: translateX(0);
+    }
+    30%{
+        transform: translateX(-100%);
+    }
+    50%{
+        transform: translateX(-100%);
+    }
+    55%{
+        transform: translateX(-200%);
+    }
+    75%{
+        transform: translateX(-200%);
+    }
+    80%{
+        transform: translateX(-300%);
+    }
+    100%{
+        transform: translateX(-300%);
+    }
+}
+
+.review__content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;/*40px*/
+}
+.review__content p{
+    width: 65%;
+    line-height: 30px;
+    color: var(--text-color);
+}
+.review__content span{
+    font-weight: 900;
+    font-size: 1.2rem;
+}
+
+.review__img__wrap{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    /* border: 1px solid green; */
+}
+.review__img img{
+    width: 335px;
+    object-fit: cover;
+
+    position: absolute;
+    top: -126px;
+    right: -70px;
+    border-bottom-right-radius: 15px;
+}
+
+#test_2, #test_4{
+    width: 250px;
+    height: 250px;
+    object-position: top;
+    top: -146px;
+    right: -48px;
+}
+
+#test_3{
+    width: 206px;
+    height: 300px;
+    object-position: top;
+    top: -200px;
+    right: -10px;
+}
 
 
 
+/* ###################################### */
+/* ### media query @767px */
 
+@media (max-width: 767px) {
+    .testimonial{
+        width: 31.25rem;/*500px*/
+        border-top-left-radius: 30px;
+        border-top-right-radius: 30px;
+    }
 
+    .review__img img{
+        width: 11.25rem;/*180px*/
+        top: -4px;
+        left: -8.375rem;/*-134px*/
+    }
+    #test_2{
+        width: 11.25rem;/*180px*/
+        height: 9.375rem; /*150px*/
+        top: -35px;
+        left: -8.75rem;/*140px*/
+    }
+    #test_4{
+        width: 11.25rem;/*180px*/
+        height: 9.375rem;/*150px*/
+        top: -32px;
+        left: -8.75rem;/*140px*/
+    }
+    #test_3{
+        width: 10rem; /*160px*/
+        height: 12.5rem;/*200px*/
+        /* height: 200px; */
+        top: -5.125; /*82px*/
+        left: -8.625;/*-138px*/
+    }
 
+    .review__content p {
+        font-size: 1rem;
+    }
+}
+@media (max-width: 480px) {
+    .testimonial{
+        width: 21.875rem;/*1350px*/
+        border-top-left-radius: 30px;
+        border-top-right-radius: 30px;
+    }
+
+    .review__img img{
+        width: 11.25rem;/*180px*/
+        top: -2.8125rem;/*45px*/
+        left: -8.375rem;/*134px*/
+    }
+    #test_2{
+        width: 11.25rem; /*180px*/
+        height: 9.375rem;/*150px*/
+        top: -4.6875rem;/*75px*/
+        left: -8.75rem;/*140px*/
+    }
+    #test_4{
+        width: 11.25rem;/*180px*/
+        height: 9.375rem;/*150px*/
+        top: -77px;/*32px*/
+        left: -8.75rem; /*140px*/
+    }
+    #test_3{
+        width: 10rem;/*160px*/
+        height: 12.5rem;/*200px*/
+        /* height: 200px; */
+        top: -126px;/*180px1*/
+        left: -9rem;/*180px*/
+    }
+
+    .testimonies{
+        padding: 0.5rem 0.9rem;
+    }
+
+    .review__content{
+        row-gap: 0.8rem;
+    }
+    .review__content p {
+        font-size: 0.855rem;
+        line-height: 20px;
+    }
+    .review__content span{
+        font-weight: 900;
+        font-size: 1rem;
+    }
+}
