--- a/style.css
+++ b/style.css
@@ -1015,12 +1015,7 @@ marquee p{
 #sect__4__wrap,
 #sect__5__wrap{
     /* this wrap everything inside of sec 3 */
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+ 
 }
 
 /* 
@@ -2111,8 +2106,103 @@ input[type=submit]:active{
     grid-column: 2/3;
 }
 .menuBurger{
-    grid-column: 3/4;
+    grid-column: 1/3;
     grid-row: 1/3;
+}
+
+.orangCol{
+    color: var(--color_orange_dk);
+}
+.yelCol{
+    color: var(--color_yellow);
+}
+
+/* footer media queiry 767px */
+@media (max-width: 767px) {
+    
+    .footer{
+        width: 100%;
+        height: auto;
+        padding: 50px 0px;
+    }
+
+    .footer__content{
+        width: 100%;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(2, 1fr);
+        padding: 0px 3.5rem;
+    }
+
+    .footer__card{
+        row-gap: 0.5rem;
+    }
+
+    .address{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    
+    .opening{
+        grid-column: 2/3;
+    }
+    .menuBurger{
+        grid-column: 1/3;
+        grid-row: 3/3;
+    }
+}
+@media (max-width: 480px) {
+    
+    .footer{
+        width: 100%;
+        height: auto;
+        padding: 50px 0px;
+    }
+
+    .footer__content{
+        width: 100%;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(2, 1fr);
+        padding: 0px 1rem;
+    }
+
+    .footer__card{
+        width: max-content;
+        row-gap: 0.5rem;
+        /* text-align: center; */
+    }
+    .footer__card p{
+        font-size: 0.9rem;
+    }
+
+    .address{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    
+    .opening{
+        grid-column: 2/3;
+    }
+    .menuBurger{
+        /* width: 100%; */
+        grid-column: 1/3;
+        grid-row: 3/3;
+        /* margin: auto;
+        text-align: center; */
+    }
+
+    /* .footer__card span {
+        width: auto;
+        flex-direction: row;
+        column-gap: 1rem;
+    } */
+    .footer__card span a{
+        font-size: 0.9rem;
+    }
+
+    .footer__wrap p {
+        margin-top: 1rem;
+        font-size: 0.8rem;
+    }
 }
 
 
