--- a/style.css
+++ b/style.css
@@ -2025,8 +2025,8 @@ input[type=submit]:active{
 /* ### foooter  */
 .footer{
     width: 100%;
-    height: 55vh;
-    padding:  0px;
+    height: auto;
+    padding: 3rem 0px 0px 0px;
     background-color: #111
 }
 
@@ -2040,19 +2040,24 @@ input[type=submit]:active{
 }
 
 .orangeCol_footer{
-    color: var(--color_orange_dk)
+    color: var(--color_orange_dk);
+    font-size: 1.8rem;
 }
 .yellowCol_footer{
-    color: var(--color_yellow)
+    color: var(--color_yellow);
+    font-size: 2rem;
 }
 
 .footer__content{
-    width: 1000px;
+    width: auto;
     /* height: 100%; */
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: center;
-    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-evenly;
+    align-content: center;
+    gap: 10px;
+    column-gap: 150px;
+    padding: 1rem;
 }
 
 /* footer card */
@@ -2068,6 +2073,9 @@ input[type=submit]:active{
     font-family: var(--headers);
     font-weight: 500;
     font-size: 1rem;
+    text-decoration: underline;
+    text-decoration-color: #8a3e04a2;
+    text-underline-offset: 10px;
 }
 
 .footer__card span{
@@ -2111,8 +2119,16 @@ input[type=submit]:active{
     grid-column: 2/3;
 }
 .menuBurger{
-    grid-column: 1/3;
+    grid-column: 3/4;
     grid-row: 1/3;
+}
+
+.bottom__fotter{
+    width: 100%;
+    margin-top: 100px;
+    padding: 1rem;
+    text-align: center;
+    background-color: #000;
 }
 
 .orangCol{
@@ -2128,13 +2144,14 @@ input[type=submit]:active{
     .footer{
         width: 100%;
         height: auto;
-        padding: 50px 0px;
+        padding: 3.125rem 0px 0px;
     }
 
     .footer__content{
         width: 100%;
         grid-template-columns: repeat(1,1fr);
         grid-template-rows: repeat(2, 1fr);
+        column-gap: 10px;
         padding: 0px 3.5rem;
     }
 
@@ -2154,13 +2171,17 @@ input[type=submit]:active{
         grid-column: 1/3;
         grid-row: 3/3;
     }
+
+    .bottom__fotter{
+        margin-top: 2.5rem;
+    }
 }
 @media (max-width: 480px) {
     
     .footer{
         width: 100%;
         height: auto;
-        padding: 50px 0px;
+        padding: 3.125rem 0px 0px;
     }
 
     .footer__content{
@@ -2176,7 +2197,8 @@ input[type=submit]:active{
         /* text-align: center; */
     }
     .footer__card p{
-        font-size: 0.9rem;
+        font-size: 0.85rem;
+        width: 130px;
     }
 
     .address{
