eight commit: finished the menu section in the home page and completed the home page

--- a/style.css
+++ b/style.css
@@ -810,21 +810,6 @@ marquee p{
     rgba(0,0,0,0.5)50%
     ),url(/img/burgar_&_chips.jpg) no-repeat center center/ cover; */
 }
-/* .card__img2{
-    background: linear-gradient( to top, rgba(0,0,0,0.5)50%,
-    rgba(0,0,0,0.5)50%
-    ),url(/img/burgar_testy.jpg) no-repeat center center/ cover;
-}
-.veggy{
-    background: linear-gradient( to top, rgba(0,0,0,0.5)50%,
-    rgba(0,0,0,0.5)50%
-    ),url(/img/hamburger-veggie.jpg) no-repeat center center/ cover;
-}
-.chicken_burger{
-    background: linear-gradient( to top, rgba(0,0,0,0.5)50%,
-    rgba(0,0,0,0.5)50%
-    ),url(/img/burgar_spicy_juicy.jpg) no-repeat center center/ cover;
-} */
 
 
 .card__img_wrap img{
@@ -1023,11 +1008,31 @@ marquee p{
     align-items: center;
 }
 
+/* housing the the submenus */
+.menu__section--wrap{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    aspect-ratio: 16/9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+.menu__section--wrap::-webkit-scrollbar{
+    display: none;
+}
+
 /* 
 * this houses the menu list and the image display
 */
 .burger__menu{
-    flex: 1;
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+    
     width: 100%;
     height: 100%;
     display: flex;
@@ -1035,6 +1040,7 @@ marquee p{
 
 /*burger menu list  */
 .burger__menu__list{
+    flex: 1 0 50%;
     width: 110%;
     height: 100%;
     display: flex;
@@ -1084,6 +1090,15 @@ marquee p{
 }
 .submenu__link:active{
     transform: translateZ(90px);
+}
+
+.active_subMenu{
+    color: var(--color_yellow);
+    text-decoration: underline;
+    text-decoration-color: var(--color_yellow);
+    text-underline-offset: 10px;
+    text-shadow: 2px 3px 6px #f1f1f198;
+    transform: scale(1.074);
 }
 
 
@@ -1156,8 +1171,9 @@ marquee p{
 }
 
 .burger__menu__img_wrap{
-    width: 100%;
+    width: 35rem;
     height: 100%;
+    padding: 0px;
 
     display: flex;
     aspect-ratio: 16/9;
@@ -1166,6 +1182,9 @@ marquee p{
     scroll-behavior: smooth;
 
     perspective: 800px;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 /* #slid1,#slid2,#slid3,
@@ -1195,20 +1214,16 @@ marquee p{
   display: none;
 }
 
-/* this will remove the scroll bar in IE and firfore and edge */
-.burger__menu__img_wrap{
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
 
 .burger__menu__img_wrap img{
     flex: 1 0 100%;
     scroll-snap-align: start;
-    object-fit: cover;
+    object-fit: contain;
+    object-position: center;
 }
 .burger__menu__img_wrap img{
-    width: 95%;
-    height: 95%;
+    width: 80%;
+    height: 100%;
     animation: imgFadeIn 1s .6s ease-in-out both;
 }
 
@@ -1226,38 +1241,101 @@ marquee p{
 /* @media 992px */
 @media (max-width: 992px) {
 
+    #section_3{
+        height: 100vh;
+        padding: 3rem;
+    }
+
+/* 
     .burger__menu{
         flex-direction: column;
+    } */
+
+    .submenu{
+      column-gap: 3rem;  
+    }
+    .burger__menu__img_wrap{
+        width: 27.69rem;
+    }
+    .burger__menu__img_wrap img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    /* fixed the added submenu */
+}
+@media (max-width: 767px) {
+
+    #section_3{
+        height: 100vh;
+        padding: 3rem;
+
+    }
+
+    .question{
+        font-size: 0.95rem;
+    }
+    .answer{
+        font-size: 0.855rem;
     }
 
     .submenu{
       column-gap: 3rem;  
     }
-
+    .burger__menu__img_wrap{
+        width: 300px;
+        height: 100%;
+    }
     .burger__menu__img_wrap img{
         width: 100%;
         height: 100%;
-        object-fit: contain;
+        object-fit: cover;
+        object-position: center;
     }
+
+    /* fixed the added submenu */
 }
 
 @media (max-width: 480px) {
     #section_3{
-        padding: 3.125rem;
+        height: auto;
+        padding: 1.5rem;
     }
     .submenu{
         column-gap: 2rem; 
         justify-content: center;
         align-items: center; 
-      }
+    }
+
+    .menu__section--wrap{
+        height: 100vh;
+    }
+
+    .burger__menu{
+        flex-direction: column;
+    }
 
     .burger__menu__list{
-        width: 100%;
+        width: auto;
         justify-content: center;
         align-items: center;
+        padding: 1rem;
     }
     .burger__menu__list__items{
         padding: 0.7rem;
+    }
+    .burger__menu__img{
+        height: 100%;
+
+    }
+
+    .burger__menu__img_wrap{
+        width: 100%;
+        height: 100%;
+    }
+    .burger__menu__img_wrap img{
+        object-fit: contain;
     }
 }
 
@@ -1863,7 +1941,7 @@ input[type=submit]:active{
     justify-content: center;
     position: relative;
 
-    animation: slide 16s infinite;
+    animation: slide 14s infinite;
 }
 
 .swiper-slide img {
